# ReviewerAgent

./: .env.example  .gitignore  Containerfile  README.md  __init__.py  __main__.py  agent_executor.py  config.py  pyproject.toml  requirements.txt  start_agent.sh  test_reviewer_client.py
src/: __init__.py  llm_client.py  llm_reviewer.py  output_formatter.py  paper_search.py  pdf_processor.py  review_engine.py  simple_pdf_processor.py
